<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation">HSTApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_member_id">Enter Member ID</string>
    <string name="enter_group_id">Enter Group ID</string>
    <string name="enter_address1">Enter Address1</string>
    <string name="enter_address2">Enter Address2</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="create_password">Create Password</string>
    <string name="create_security_questions">Create Security Questions</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="member_information">Member Information</string>
    <string name="demographics">Demographics</string>
    <string name="primary_care_provider">Primary Care Provider</string>
    <string name="personal_information">Personal Information</string>
    <string name="insurance">Insurance</string>
     <string name="member_age">Member Age :</string>
     <string name="member_gender">Member Gender :</string>
    <string name="find_providers">Find Providers</string>
    <string name="mem_demographics">Member Demographics</string>
    <string name="contact">Contact HST</string>
    <string name="more">More...</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="must_agree_to_continue">Agree to Continue</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="extra">sdfdsgdfgdfgdfgfgdfgdfgdfgdfgdfgdfgdfgdfgfgfgfdgdfgdfcvcvbvcbdfgfdgdfdfsdsfdsfdsfdsg</string>
    <string name="member_demographics">Member Info</string>
    <string name="member_insurance_information">Insurance Info</string>
    <string name="member_insurance">Insurance Info</string>
    <string name="member_pcp_information">Your Doctor</string>
    <string name="provider_contact_information">Provider Contact Information</string>
    <string name="mem_insurance_information">Member Insurance Information</string>
    <string name="list_of_authorized_providers">Find a Provider</string>
    <string name="agreement">Agreement</string>
    <string name="group_id">Group Id</string>
    <string name="member_id">Member Id</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="hst">HST</string>
    <string name="contact_information">Contact Info</string>
    <string name="office_hours">Office Hours</string>
    <string name="other_notes">Other Notes</string>
    <string name="id_number">ID Number:</string>
    <string name="group_number">Group Id:</string>
    <string name="co_pay">Co-Pay:</string>
    <string name="deductible">Deductible:</string>
    <string name="plan_contact_information">Plan Contact Information:</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone_no">Phone No:</string>
    <string name="change_password">Change Password</string>
    <string name="project_number">1073911340340</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="settings">Settings</string>
    <string name="member_id_">Member Id:</string>
    <string name="group_num">Group Number :</string>
    <string name="group_id_">Group Id:</string>
	<string-array name="security_question">
	    <item >What was your first pet\'s name?</item>
	    <item >What city were you born in?</item>
	    <item >What is your favorite sports teams name?</item>
	    <item >What is your most remembered event?</item>
	    <item >What was your childhood nickname?</item>
	    <item >Who were you named after?</item>
	    <item >What is your favorite restaurant?</item>
	    <item >What is your favorite flower?</item>
	    <item >Who is your hero?</item>
	    <item >In what city did you meet your spouse/significant other?</item>
	    <item >What is your most meaningful book?</item>
	    <item >Who is your first friend?</item>
	    <item >What is the first name of your favorite childhood friend?</item>
	    <item >What street did you live on in third grade?</item>
	</string-array>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="address1">Address1:</string>
    <string name="address2">Address2:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="effective_date">Effective Date:</string>
    <string name="plan">Plan:</string>
    <string name="office_visit_co_pay_amount">Office Visit Co Pay Amount:</string>
    <string name="drug_co_pay_amount">Drug Co Pay Amount:</string>
    <string name="hospital_co_pay_amount">Hospital Co Pay Amount:</string>
    <string name="emergency_visit_co_pay_amount">Emergency Visit Co Pay Amount:</string>
    <string name="enter_miles">Enter Miles</string>
    <string name="auto_update">Auto Update</string>
    <string name="get_providers">Get Providers</string>
    <string name="hours_open">Hours Open:</string>
    <string name="group_name">Group Name:</string>
    <string name="firstname">Enter FirstName</string>
    <string name="last_name">Enter Last Name</string>
    <string name="enter_birth_date">Enter Birth Date</string>
    <string name="policy">All Rights Reserved.  Powered by HSTechnology © 2014</string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="switch_to_full_site"><u>Switch to full Site</u></string>
    <string name="find_by_name">Find by Name</string>
    <string name="within">Within</string>
    <string name="another_address">Another Address</string>
    <string name="my_current_location">My Current Location</string>
    <string name="search">Search</string>
	<string-array name="provider_distance">
        <item><u>5 Miles of</u></item>
        <item><u>10 Miles of</u></item>
        <item><u>15 Miles of</u></item>
        <item><u>20 Miles of</u></item>
        <item><u>25 Miles of</u></item>
    </string-array>
        <string name="choosing_providers">Choosing providers that don\'t participate in your plan\'s network may incur higher costs or denied claims</string>
    	<string name="map_results">Map Results</string>
	<string name="refine_results">Refine Results</string>
	 <string name="choosing_providers2">Choosing providers that don\'t participate in your plan\'s network may incur higher costs or denied claims</string>
        <string name="accepting_new_patients">Accepting new Patients</string>
        <string name="view_accepted_plans">View accepted Blue Shiled plans</string>
        <string name="phone">phone</string>
        <string name="address">address</string>
        <string name="languages">languages</string>
        <string name="copyright_info">Powered by HSTechnology © 2014. All rights reserved.</string>
        <string name="directions_to_here">Directions to Here</string>
        <string name="accepted_blue_shield_plans">Accepted Plans</string>
    
</resources>