<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical" 
        android:typeface="sans"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            android:background="@drawable/header"
            android:gravity="top"
            android:padding="5dp"
            android:typeface="sans"
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hst"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:typeface="sans"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" 
            android:typeface="sans"
            >

            <LinearLayout
                android:id="@+id/layoutEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/normalfield_back"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp" 
                android:typeface="sans"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/enter_password"
                    tools:ignore="ContentDescription" 
                    android:typeface="sans"
                    />

                <EditText
                    android:id="@+id/editEnterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="2dp"
                    android:singleLine="true" 
                    android:typeface="sans"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" 
                android:typeface="sans"
                />

            <Button
                android:id="@+id/btnRegistration"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/register"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="18sp" 
                android:typeface="sans"
                />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forgot_password_"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:typeface="sans"
                 />
        </LinearLayout>
    </LinearLayout>

</ScrollView>